--- a/package.json
+++ b/package.json
@@ -65,6 +65,9 @@
     "vaul": "^1.1.2",
     "zod": "^3.24.4"
   },
+  "optionalDependencies": {
+    "@rollup/rollup-linux-x64-gnu": "4.6.1"
+  },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
     "@types/react": "^19.1.2",
